--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-app-rewired": "^2.2.1",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.2.3",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.2.1",
     "react-router": "^5.2.1",
