--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^2.0.0",
     "bootstrap": "^5.1.3",
     "crypto-browserify": "^3.12.0",
+    "express": "^4.18.1",
     "https-browserify": "^1.0.0",
     "magic-sdk": "7.0.0",
     "moralis": "^1.2.3",
@@ -30,6 +31,7 @@
     "redux": "^4.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "timesync": "^1.0.10",
     "url": "^0.11.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
