--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@walletconnect/web3-provider": "^1.6.6",
     "antd": "^4.16.13",
     "assert": "^2.0.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.1",
