--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "ethereum-boilerplate",
   "version": "0.1.0",
+  "engines": {
+    "npm": ">=8.5.1",
+    "node": ">=14.22.9"    
+  },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.1",
@@ -34,8 +38,7 @@
     "stream-http": "^3.2.0",
     "timesync": "^1.0.10",
     "url": "^0.11.0",
-    "web-vitals": "^1.0.1",
-    "yarn": "^1.22.17"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-app-rewired start",
