--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "engines": {
     "npm": ">=8.5.1",
-    "node": ">=14.22.9"    
+    "node": ">=14.22.9"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -23,7 +23,6 @@
     "moralis": "^1.2.3",
     "os-browserify": "^0.3.0",
     "react": "^17.0.2",
-    "react-app-rewired": "^2.2.1",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.2.3",
     "react-countdown": "^2.3.2",
@@ -84,6 +83,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
